_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
/* ... */
.fogbugz-helper-ticket-tweaks .case-lightbox-overlay .case-lightbox {
  width: auto;
  /*max-width: none;*/
  min-width: 0;
}

.fogbugz-helper-ticket-tweaks section.case {
  width: auto;
  /*max-width: none;*/
  min-width: 0;
}

/* Responsive */

@media ( max-width: 1024px ) {
  /* Header */
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-header-bar {
    height: auto;
    display: table;
    width: 100%;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav {
    float: none;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .secondary-nav {
    position: static;
    float: right;
  }

  .fogbugz-helper-ticket-tweaks #header #below-banner {
    position: static;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .case-tools {
    float: none;
    display: inline;
    margin: 0;
  }

  .fogbugz-helper-ticket-tweaks #stacking-context-main > #main {
    padding-top: 10px;
  }
}

@media ( max-width: 765px ) {
  /* fake kanbanboard */
  .fogbugz-helper-ticket-tweaks.fogbugz-helper-fake-kanban-double-sorted .list-group-body {
    display: block;
  }

  .fogbugz-helper-ticket-tweaks.fogbugz-helper-fake-kanban-double-sorted .list-group-body > table {
    margin-bottom: 4px;
  }

  /* header */

  .fogbugz-helper-ticket-tweaks #header.thunder-header.has-custom-logo {
    max-width: 100%;
    overflow: auto;
    position: static;
    -webkit-overflow-scrolling: touch;
  }

  .fogbugz-helper-ticket-tweaks .main-header-bar {
    white-space: nowrap;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .secondary-nav,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .secondary-nav > ul,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .secondary-nav > ul > li,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav > ul,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav > ul > li,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav .case-tools > ul,
  .fogbugz-helper-ticket-tweaks #header.thunder-header .main-nav .case-tools > ul > li {
    display: inline-block;
    vertical-align: top;
    float: none;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .dropdown.active .dropdown-menu {
    position: fixed;
    left: 0;
    right: 0;
    width: 90vw;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }

  /* other */

  .fogbugz-helper-ticket-tweaks #stacking-context-main > #main {
    padding-left: .5em;
    padding-right: .5em;
  }

  .fogbugz-helper-ticket-tweaks section.case nav .controls {
    display: inline;
  }

  .fogbugz-helper-ticket-tweaks .case-lightbox-overlay {
    position: fixed;
    z-index: 101;
    padding-left: .5em;
  }

  .fogbugz-helper-ticket-tweaks .case-lightbox-overlay {
    -webkit-overflow-scrolling: touch;
  }

  .fogbugz-helper-ticket-tweaks #case-lightbox-popups {
    margin-top: 10px;
  }

  .fogbugz-helper-ticket-tweaks #case-lightbox-popups * {
    position: static !important;
    width: auto !important;
    min-width: 0 !important;
  }

  .fogbugz-helper-ticket-tweaks .case-popup .comment .body:after {
    display: none;
  }

  .fogbugz-helper-ticket-tweaks #case-lightbox-popups + .case-lightbox {
    margin-top: 20px;
  }

  .fogbugz-helper-ticket-tweaks section.case .corner a.case {
    width: auto;
  }

  .fogbugz-helper-ticket-tweaks section.case nav {
    height: auto;
    display: block;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .has-search-guide {
    position: static;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .search-guide #search-guide-button {
    top: 9px;
  }

  .fogbugz-helper-ticket-tweaks #header.thunder-header .search-guide .panel {
    z-index: 100;
    position: fixed;
    left: 0;
    width: 100vw;
  }

  .fogbugz-helper-ticket-tweaks section.case,
  .fogbugz-helper-ticket-tweaks .case-lightbox-overlay .case-lightbox {
    min-width: 0;
    width: 100%;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > .top,
  .fogbugz-helper-ticket-tweaks #formEditCase > .top > .left,
  .fogbugz-helper-ticket-tweaks #formEditCase > .top > header,
  .fogbugz-helper-ticket-tweaks #main section.case #formEditCase .top>header {
    display: block;
  }

  .fogbugz-helper-ticket-tweaks section.case .left {
    margin: 0 10px 0 10px;
    padding: 0 0 0 0;
    float: none;
    width: auto;
  }

  .fogbugz-helper-ticket-tweaks section.case .left button {
    display: inline-block;
    margin-left: 1em;
    width: auto;
  }

  .fogbugz-helper-ticket-tweaks section.case .top>header>h1 {
    padding-top: 0;
    font-size: 20px;
    line-height: 1.5;
  }

  .fogbugz-helper-ticket-tweaks section.case .events,
  .fogbugz-helper-ticket-tweaks section.case .top>header {
    float: none;
    width: auto;
    border-left: 0;
  }

  .fogbugz-helper-ticket-tweaks section.case .corner a.case {
    font-size: 16px;
    font-weight: bold;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > .events {
    padding-left: 0;
    padding-right: 0;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > .left {
    padding-left: 10px;
    width: 150px;
    position: relative;
    margin-right: -150px;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > #eventList-0 {
    padding-left: 160px;
    width: 100%;
  }
}

@media ( max-width: 480px ) {
  .fogbugz-helper-ticket-tweaks section.case .field {
    width: auto;
    float: none;
    display: block;
  }

  #formEditCase {
    display: flex;
    flex-direction: column;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > .left {
    width: 100%;
    float: none;
    margin-left: 0;
    padding-right: 10px;
    order: 4;
  }

  .fogbugz-helper-ticket-tweaks #formEditCase > #eventList-0 {
    padding-left: 10px;
    width: 100%;
    float: none;
  }

  .fogbugz-helper-ticket-tweaks #main .case-list {
    display: block;
  }
}
/* ... */

